--- a/views/index.erb
+++ b/views/index.erb
@@ -17,6 +17,10 @@
         <input type="submit" value="Verificar" />
       </form>
       
+      <div id="loading">
+        Consultando&hellip;
+      </div>
+      
       <div id="results" class="no">
         <h3>RUT: <span id="results_rut">xxxxxxx</span> es socio?</h3>
         <p class="message">YES</p>
