--- a/views/index.erb
+++ b/views/index.erb
@@ -25,6 +25,10 @@
         <h3>RUT: <span id="results_rut">xxxxxxx</span> es socio?</h3>
         <p class="message">YES</p>
       </div>
+      
+      <pre id="raw">
+        
+      </pre>
     </div>
     
   </body>
